# opl

./: .gitignore  :  CMakeLists.txt  LICENSE  README.md
example/: 2windows.c  CMakeLists.txt  main.c  window-creation.c
examples/: CMakeLists.txt  alert.c  console.c  dirs.c  example.c  files.c  init.c  threads.c  window-creation.c
include/opl/: opl.h
src/: CMakeLists.txt  cocoa-platform.m  cocoa-time.c  cocoa.m  init.c  internal.h  null.c  opl.c  opl.h  platform.c  platform.h  posix-console.c  posix-file.c  posix-memory.c  posix-thread.c  posix-time.c  win32-platform.c  win32.c  x11-platform.c  x11.c
src/frontend/: init.c  internal.h  platform.c  platform.h
tests/: CMakeLists.txt
